// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.c2 {
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c3 {
  line-height: 28px;
  font-weight: bold;
}

.c5 {
  line-height: 22px;
  font-weight: normal;
}

.c7 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c7:before,
.c7:after {
  content: ' ';
  display: table;
}

.c7:after {
  clear: both;
}

.c10 {
  padding: 0 16px;
  margin-top: 12px;
}

.c12 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c12:before,
.c12:after {
  content: ' ';
  display: table;
}

.c12:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  border: 1px solid transparent;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
  box-shadow: 0px 1px 0px 0px rgba(223,224,241,1),0px 1px 3px 0px rgba(182,188,224,0.5),0px 4px 12px 0px rgba(218,221,238,0.5);
}

.c0 .c1:last-child,
.c0 .c6:last-child,
.c0 .c9:last-child,
.c0 .c11:last-child {
  margin-bottom: 12px;
}

.c0 .c1 {
  color: #0a1633;
  font-size: 14px;
  padding: 0 24px;
  margin-top: 14px;
}

.c0 .c4 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c6 {
  padding: 0 24px;
  margin-top: 14px;
}

.c0 .c9 {
  padding: 0 24px;
  margin-top: 14px;
}

.c0 .c11 {
  border-top: 1px solid #e1e6f0;
  padding: 0 24px;
  margin-top: 14px;
  padding-top: 14px;
}

.c8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c8:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div
  class="uc-fe-card c0"
>
  <div
    class="c1 uc-fe-card-header c2"
  >
    <div
      class="uc-fe-card-title c3"
    >
      This is the title
    </div>
    <div
      class="c4 uc-fe-card-comment c5"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c6 uc-fe-card-action c7"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c8"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c8"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c9 uc-fe-card-content c10"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c11 uc-fe-card-footer c12"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c8"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.c7 {
  padding: 0 16px;
  margin-top: 12px;
}

.c7:before,
.c7:after {
  content: ' ';
  display: table;
}

.c7:after {
  clear: both;
}

.c8 {
  line-height: 28px;
  font-weight: bold;
}

.c10 {
  line-height: 22px;
  font-weight: normal;
}

.c4 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c2 {
  padding: 0 16px;
  margin-top: 12px;
}

.c12 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c12:before,
.c12:after {
  content: ' ';
  display: table;
}

.c12:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  border: 1px solid transparent;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
  box-shadow: 0px 1px 0px 0px rgba(223,224,241,1),0px 1px 3px 0px rgba(182,188,224,0.5),0px 4px 12px 0px rgba(218,221,238,0.5);
}

.c0 .c6:last-child,
.c0 .c3:last-child,
.c0 .c1:last-child,
.c0 .c11:last-child {
  margin-bottom: 12px;
}

.c0 .c6 {
  color: #0a1633;
  font-size: 14px;
  padding: 0 24px;
  margin-top: 14px;
}

.c0 .c9 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c3 {
  padding: 0 24px;
  margin-top: 14px;
}

.c0 .c1 {
  padding: 0 24px;
  margin-top: 14px;
}

.c0 .c11 {
  border-top: 1px solid #e1e6f0;
  padding: 0 24px;
  margin-top: 14px;
  padding-top: 14px;
}

.c5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div
  class="uc-fe-card c0"
>
  <div
    class="c1 uc-fe-card-content c2"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c3 uc-fe-card-action c4"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c6 uc-fe-card-header c7"
  >
    <div
      class="uc-fe-card-title c8"
    >
      This is the title
    </div>
    <div
      class="c9 uc-fe-card-comment c10"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c11 uc-fe-card-footer c12"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;
